--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
-<li><strong>2016-12-30 : </strong></strong>all Rolling editions 999.161230.0 (<a href="https://">release notes</a>)</li>
+<li><strong>2016-12-30 : </strong></strong>all Rolling editions 999.161230.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/CLJ5kkaTX9Y">release notes</a>)</li>
 <li><strong>2016-12-30 : </strong></strong>all Static editions 422.161228.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/q3k0Dli10T8">release notes</a>)</li>
 <li><strong>2016-12-20 : </strong></strong>all Rolling editions 999.161218.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/dfTDYUkLIFM">release notes</a>)</li>	
 <li><strong>2016-12-14 : </strong></strong>all Static editions 422.161213.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/0FmVb7Nx7r4">release notes</a>)</li>
