--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
-<li><strong>2016-12-30 : </strong></strong>all Rolling editions 999.161230.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/CLJ5kkaTX9Y">release notes</a>)</li>
+<li><strong>2017-01-25 : </strong></strong>all Static editions 422.170124.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/TxVFhH__UcU">release notes</a>)</li>	
+<li><strong>2017-01-25 : </strong></strong>all Rolling editions 999.170124.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/4pWN5ZV7qZM">release notes</a>)</li>
 <li><strong>2016-12-30 : </strong></strong>all Static editions 422.161228.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/q3k0Dli10T8">release notes</a>)</li>
 <li><strong>2016-12-20 : </strong></strong>all Rolling editions 999.161218.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/dfTDYUkLIFM">release notes</a>)</li>	
 <li><strong>2016-12-14 : </strong></strong>all Static editions 422.161213.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/0FmVb7Nx7r4">release notes</a>)</li>
@@ -178,8 +179,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Budgie
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/421.160627/GeckoLinux_Budgie10.x86_64-421.160627.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160627.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_Budgie10.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -272,8 +273,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Budgie
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.161031/GeckoLinux_ROLLING_Budgie10.x86_64-999.161031.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-budgie10/start_testdrive?version=999.161031.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170124/GeckoLinux_ROLLING_Budgie10.x86_64-999.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-budgie10/start_testdrive?version=999.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
