--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2017-02-05 : </strong></strong>Plasma <em>NEXT</em> edition 422.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/mG-f61jc5A4">release notes</a>)</li>	
 <li><strong>2017-01-25 : </strong></strong>all Static editions 422.170124.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/TxVFhH__UcU">release notes</a>)</li>	
 <li><strong>2017-01-25 : </strong></strong>all Rolling editions 999.170124.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/4pWN5ZV7qZM">release notes</a>)</li>
 <li><strong>2016-12-30 : </strong></strong>all Static editions 422.161228.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/q3k0Dli10T8">release notes</a>)</li>
@@ -321,8 +322,8 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux Plasma <em>NEXT</em> </br>
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_Plasma_NEXT.x86_64-421.161103.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next/start_testdrive?version=421.161103.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_Plasma_NEXT.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
