--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2017-02-05 : </strong></strong>all Static editions 422.170205.0 (<a href="">release notes</a>)</li>		
 <li><strong>2017-02-05 : </strong></strong>Plasma <em>NEXT</em> edition 422.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/mG-f61jc5A4">release notes</a>)</li>	
 <li><strong>2017-01-25 : </strong></strong>all Static editions 422.170124.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/TxVFhH__UcU">release notes</a>)</li>	
 <li><strong>2017-01-25 : </strong></strong>all Rolling editions 999.170124.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/4pWN5ZV7qZM">release notes</a>)</li>
@@ -108,7 +109,7 @@ GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.2 with its per
 <h5>
 	<p>
 		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-		<a href="https://sourceforge.net/projects/geckolinux/files/Static/">Sourceforge directory listing</a>.
+		<a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/">Sourceforge directory listing</a>.
 	</p>
 	<p>
 		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
@@ -133,8 +134,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Cinnamon
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_Cinnamon.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/GeckoLinux_Cinnamon.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -142,8 +143,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> XFCE
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_XFCE.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/GeckoLinux_XFCE.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -151,8 +152,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Gnome
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_Gnome.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/GeckoLinux_Gnome.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -160,8 +161,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Plasma Stable
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_Plasma_Stable.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/GeckoLinux_Plasma_Stable.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -171,8 +172,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Mate
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_Mate.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/GeckoLinux_Mate.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -180,8 +181,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Budgie
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_Budgie10.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/GeckoLinux_Budgie10.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -189,8 +190,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> LXQt
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_LXQt.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/GeckoLinux_LXQt.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -198,8 +199,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> "Barebones"
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170124/GeckoLinux_BareBones.x86_64-422.170124.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=422.170124.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/GeckoLinux_BareBones.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
