--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <li>Beautiful open source font rendering configured out of the box</li>
 <li>Optimal power management with TLP pre-installed</li>
 <li>Much more open source and patent encumbered software available in the pre-configured repositories</li>
+<li>Uses the excellent infrastructure already in place for openSUSE, with no repackaging or modification of packages</li>
 </ul>
 
 
