--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2017-03-03 : </strong></strong>all Static editions 999.170302.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/qNFY9GGk_fc">release notes</a>)</li>	
 <li><strong>2017-02-05 : </strong></strong>all Rolling editions 999.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/J_QY7fBq8iQ">release notes</a>)</li>
 <li><strong>2017-02-05 : </strong></strong>all Static editions 422.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/YPSmzfqyqp8">release notes</a>)</li>		
 <li><strong>2017-02-05 : </strong></strong>Plasma <em>NEXT</em> edition 422.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/mG-f61jc5A4">release notes</a>)</li>	
@@ -111,7 +112,7 @@ GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.2 with its per
 <h5>
 	<p>
 		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-		<a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170205/">Sourceforge directory listing</a>.
+		<a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/">Sourceforge directory listing</a>.
 	</p>
 	<p>
 		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
