--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
-<li><strong>2017-03-03 : </strong></strong>all Static editions 999.170302.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/qNFY9GGk_fc">release notes</a>)</li>	
+<li><strong>2017-03-03 : </strong></strong>all Rolling editions 999.170302.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/sJlfvxmmy1U">release notes</a>)</li>
+<li><strong>2017-03-03 : </strong></strong>all Static editions 422.170302.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/qNFY9GGk_fc">release notes</a>)</li>	
 <li><strong>2017-02-05 : </strong></strong>all Rolling editions 999.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/J_QY7fBq8iQ">release notes</a>)</li>
 <li><strong>2017-02-05 : </strong></strong>all Static editions 422.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/YPSmzfqyqp8">release notes</a>)</li>		
 <li><strong>2017-02-05 : </strong></strong>Plasma <em>NEXT</em> edition 422.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/mG-f61jc5A4">release notes</a>)</li>	
