--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2017-03-03 : </strong></strong>Plasma <em>NEXT</em> edition 422.170303.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/oIXA5-VlRBw">release notes</a>)</li>	
 <li><strong>2017-03-03 : </strong></strong>all Rolling editions 999.170302.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/sJlfvxmmy1U">release notes</a>)</li>
 <li><strong>2017-03-03 : </strong></strong>all Static editions 422.170302.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/qNFY9GGk_fc">release notes</a>)</li>	
 <li><strong>2017-02-05 : </strong></strong>all Rolling editions 999.170205.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/J_QY7fBq8iQ">release notes</a>)</li>
@@ -327,8 +328,8 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux Plasma <em>NEXT</em> </br>
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_Plasma_NEXT.x86_64-422.170205.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next/start_testdrive?version=422.170205.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_Plasma_NEXT.x86_64-422.170303.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next/start_testdrive?version=422.170303.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
